Auto stash before merge of "main" and "origin/main"

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,6 +1,10 @@
+@import "settings"
 
+h1
+  color: $grey
 
+.box
+  @include bg_grey
+  //width: 100px
+  //height: 100px
 
-*
-  padding: 0
-  margin: 0
