--- a/src/settings.css
+++ b/src/settings.css
@@ -1,3 +1,11 @@
+body {
+  margin: 0;
+  padding: 0;
+}
 
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
 
 /*# sourceMappingURL=settings.css.map */
