--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,22 @@
-* {
-  padding: 0;
+body {
   margin: 0;
+  padding: 0;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+h1 {
+  color: #cecece;
+}
+
+.box {
+  color: #222222;
+  width: 100px;
+  height: 30px;
+  background-color: #cecece;
 }
 
 /*# sourceMappingURL=styles.css.map */
