--- a/src/settings.sass
+++ b/src/settings.sass
@@ -1,3 +1,7 @@
+// design from https://www.figma.com/file/G1kHReMgOAMcYR2aYDPGeS/%D0%94%D0%BE%D0%B1%D1%80%D1%8B%D0%B5-%D0%BE%D0%BA%D0%BD%D0%B0-%D0%BD%D0%BE%D0%B2%D1%8B%D0%B5-%D1%81%D1%82%D1%80%D0%B0%D0%BD%D0%B8%D1%86%D1%8B?node-id=104%3A700
+
+// base settings
+
 body
   margin: 0
   padding: 0
@@ -9,10 +13,30 @@ body
 $white: #ffffff
 $black: #222222
 $grey: #cecece
+$green: #5DC044
+
+// burger
+.burger
+  display: block
+  position: relative
+  width: 30px
+  height: 24px
+  align-self: center
+  @media (min-width: 800px)
+    display: none
+  &:hover
+    cursor: pointer
+  span
+    position: absolute
+    display: block
+    width: 100%
+    height: 4px
+    background-color: $green
+  span:nth-child(1n)
+    top: 0
+  span:nth-child(2n)
+    top: 8px
+  span:nth-child(3n)
+    top: 16px
 
 
-@mixin bg_grey
-  color: $black
-  width: 100px
-  height: 30px
-  background-color: $grey
