--- a/src/styles.css
+++ b/src/styles.css
@@ -8,15 +8,134 @@ body {
   margin: 0 auto;
 }
 
-h1 {
-  color: #cecece;
+.burger {
+  display: block;
+  position: relative;
+  width: 30px;
+  height: 24px;
+  align-self: center;
+}
+@media (min-width: 800px) {
+  .burger {
+    display: none;
+  }
+}
+.burger:hover {
+  cursor: pointer;
+}
+.burger span {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: #5DC044;
+}
+.burger span:nth-child(1n) {
+  top: 0;
+}
+.burger span:nth-child(2n) {
+  top: 8px;
+}
+.burger span:nth-child(3n) {
+  top: 16px;
 }
 
-.box {
-  color: #222222;
+.header {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+@media (min-width: 320px) and (max-width: 550px) {
+  .header {
+    justify-content: space-around;
+    margin: 20px auto;
+  }
+}
+.header_icon {
+  display: block;
   width: 100px;
-  height: 30px;
-  background-color: #cecece;
+  height: 100px;
+}
+@media (min-width: 320px) and (max-width: 550px) {
+  .header_icon {
+    width: 60px;
+    height: 60px;
+  }
+}
+.header_icon img {
+  width: 100%;
+}
+
+.nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin-left: 30px;
+}
+@media (min-width: 320px) and (max-width: 550px) {
+  .nav {
+    display: none;
+  }
+}
+.nav_top {
+  display: flex;
+  justify-content: space-between;
+}
+.nav_top_wrapper_item {
+  margin-right: 20px;
+  text-decoration: none;
+  color: #cecece;
+}
+.nav_top_tel {
+  display: block;
+  text-decoration: none;
+  color: #222222;
+  font-weight: bold;
+}
+.nav_top_tel .fa-phone-alt {
+  padding: 7px;
+  background-color: #5DC044;
+  border-radius: 50%;
+  font-size: 12px;
+  color: #ffffff;
+  text-align: center;
+  align-self: center;
+  margin-right: 5px;
+}
+.nav_bottom {
+  display: flex;
+  justify-content: space-between;
+}
+.nav_bottom_item {
+  display: block;
+  color: #222222;
+  text-decoration: none;
+  text-transform: uppercase;
+  margin-right: 14px;
+  white-space: nowrap;
+  font-weight: bold;
+  border-bottom: 1px solid transparent;
+}
+.nav_bottom_item:hover {
+  border-bottom: 1px solid #222222;
+}
+
+.mobile_nav {
+  display: none;
+}
+@media (min-width: 320px) and (max-width: 550px) {
+  .mobile_nav {
+    display: flex;
+  }
+}
+.mobile_nav_tel {
+  display: block;
+  align-self: center;
+  text-decoration: none;
+  color: #222222;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
 }
 
 /*# sourceMappingURL=styles.css.map */
