--- a/src/settings.sass
+++ b/src/settings.sass
@@ -1,5 +1,16 @@
 // design from https://www.figma.com/file/G1kHReMgOAMcYR2aYDPGeS/%D0%94%D0%BE%D0%B1%D1%80%D1%8B%D0%B5-%D0%BE%D0%BA%D0%BD%D0%B0-%D0%BD%D0%BE%D0%B2%D1%8B%D0%B5-%D1%81%D1%82%D1%80%D0%B0%D0%BD%D0%B8%D1%86%D1%8B?node-id=104%3A700
 
+
+
+// fonts
+
+
+// colors
+$white: #ffffff
+$black: #222222
+$grey: #cecece
+$green: #5DC044
+
 // base settings
 
 body
@@ -10,10 +21,10 @@ body
   max-width: 1200px
   margin: 0 auto
 
-$white: #ffffff
-$black: #222222
-$grey: #cecece
-$green: #5DC044
+input,
+button,
+select
+  outline: none
 
 // burger
 .burger
@@ -38,5 +49,4 @@ $green: #5DC044
     top: 8px
   span:nth-child(3n)
     top: 16px
-
 
